Comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum asperiores optio, dolorum, accusantium ducimus beatae recusandae unde tempora deleniti cumque harum est error voluptate. Est alias laboriosam magnam blanditiis id.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quos repellendus nihil in porro sed veritatis vitae ratione quisquam recusandae vero veniam sit exercitationem, quas necessitatibus obcaecati illo iure animi.</p>
         </article>
     </main>
 </body>
